card text spacing corrected

--- a/Week 05/myCssExercises/PixelPerfect/style.css
+++ b/Week 05/myCssExercises/PixelPerfect/style.css
@@ -23,6 +23,7 @@ body {
     width: 100%;
     background-color: #F3F3F3;
     min-height: 100vh;
+    padding-bottom: 100px;
     
 
 }
@@ -121,7 +122,7 @@ p span {
     font-weight: 300;
     line-height: 16.41px;
     text-align: left;
-    margin-top: 2px;
+    margin-top: 5px;
     letter-spacing: 0.2px;
 
 
